@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/08/14
+	* Increased Run's walk speed bonus to 25->50% [Skotlex]
+	* Modified emergency_call setting to allow for more specific configuration
+	  (woe/non-woe, gvg-grounds/non-gvg-grounds, disable from nowarpto maps), see
+	  skill.conf for details. [Skotlex]
 	* Fixed script engine allowing scripts to set a player's zeny to negative
 	  values. [Skotlex]
 	* Fixed setting hide_woe_damage making even "miss" attacks seem to connect.
